[package]
name = "bus-factor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
url = "2.2.2"
futures = "0.3.21"
